# SIDDA

./: .gitignore  LICENSE  README.md  pyproject.toml
src/paper_notebooks/: umap.ipynb  umap_interactive.ipynb
src/scripts/: dataset.py  models.py  test.py  train_SIDDA.py  train_SIDDA.yaml
