[project]
name = "sidda"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "escnn==1.0.11",
  "geomloss>=0.2.6",
  "matplotlib>=3.10.8",
  "pandas>=3.0.1",
  "pre",
  "pyyaml>=6.0.3",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "torch>=2.11.0",
  "torchsummary>=1.5.1",
  "torchvision>=0.26.0",
  "tqdm>=4.67.3",
]

[tool.uv]
environments = ["sys_platform == 'linux' and python_version == '3.11'"]
override-dependencies = ["lie-learn==0.0.2"]

[tool.uv.sources]
pre = { git = "https://github.com/dimicorn/jet_garden_pre.git" }
